activity__descr change

--- a/sass/components/_activity.scss
+++ b/sass/components/_activity.scss
@@ -48,6 +48,7 @@
     border-radius: 0px 0px 4px 4px;
     font-weight: 700;
     font-size: 14px;
+    text-transform: uppercase;
     line-height: 1.14;
     padding-top: 27px;
     padding-bottom: 27px;
