--- a/css/main.css
+++ b/css/main.css
@@ -1267,6 +1267,7 @@ img {
   border-radius: 0px 0px 4px 4px;
   font-weight: 700;
   font-size: 14px;
+  text-transform: uppercase;
   line-height: 1.14;
   padding-top: 27px;
   padding-bottom: 27px;
